--- a/todov2 (1)/index.html
+++ b/todov2 (1)/index.html
@@ -15,7 +15,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"/>
 
     <div id="todo">
-      <h3><u>To-Do List Test></h3>
+      <h3><u>To-Do List Test2></h3> 
 
 
 
