--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -15,7 +15,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"/>
 
     <div id="todo">
-        <h3><u>To-Do List Test<u></h3>
+        <h3><u>To-Do List Test 2 <u></h3>
         <form action="#" id="todo-form">
             <input type="text" placeholder="To-do" name="todo" />
             <input type="submit" value="Add"/>
